# zed

./: Cargo.toml
.github/workflows/: production_build.yml  rust.yml
assets/keymaps/: default-macos.json
assets/settings/: default.json
crates/copilot_ui/src/: sign_in.rs
crates/edit_prediction/src/: license_detection.rs
crates/editor/src/: code_context_menus.rs  editor.rs  editor_tests.rs  items.rs
crates/git_ui/src/: git_ui.rs
crates/gpui/src/: gpui.rs  profiler.rs
crates/local_history_ui/: Cargo.toml
crates/local_history_ui/src/: local_history_panel.rs
crates/pijul/: Cargo.toml
crates/pijul/src/: pijul.rs  pijul_repository.rs  pijul_store.rs
crates/pijul_ui/: Cargo.toml
crates/pijul_ui/src/: channel_picker.rs  pijul_ui.rs
crates/project/: Cargo.toml
crates/project/src/: local_history.rs  lsp_store.rs  manifest_tree.rs  project.rs  worktree_store.rs
crates/recent_projects/src/: recent_projects.rs  remote_connections.rs  remote_servers.rs
crates/remote_server/src/: server.rs
crates/rope/src/: rope.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: settings_content.rs
crates/settings_ui/src/: page_data.rs
crates/title_bar/src/: title_bar.rs  title_bar_settings.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: status_bar.rs  (+4 more)
crates/zed/: Cargo.toml
crates/zed_herodotus/: Cargo.toml
crates/zed_herodotus/src/: main.rs
dataforcodex/: roman.west
docs/src/: SUMMARY.md  configuring-zed.md  local-history.md  visual-customization.md
feature/timeline-vscmir/: roman.west
script/: bundle-windows.ps1
(+8 files in other folders)
