[package]
name = "zed-herodotus"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[features]
runtime_shaders = ["gpui/runtime_shaders"]

[[bin]]
name = "zed-herodotus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gpui.workspace = true
language.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
